--- a/index.html
+++ b/index.html
@@ -3,24 +3,46 @@
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="x-ua-compatiple" content="ie=edge">
+<link rel="stylesheet" href="style.css"
 <meta name="viewport" content="width=,
 
  initial-scale=1.0">
   <title>document</title>
 </head>
 </html>
-    <h>O que é um algoritmo?</h1>
+        <div>
+        <h1 class="">
+            <strong> principais regras do volei!</strong>
 
-        <p>É um conjunto de ideias e lógicas extremamente detalhadas e bem organizadas para resolver um problema ou mais de um.</p>
+            </h1>
         
-        <p2>Ex:Ao atravessar uma rua olhar para os lados e atravessar, se houver carro espero, se não, atravesso até chegar ao outro lado.</p2>
-        
-        <h2> principais regras do volei!</h2>
+    </div>
 
-        <p3>Quando um jogador for sacar, sempre atraz da linha da quadra se não, ponto adversário. O jogo se inicia quando tem 6 jogadores em quadra,
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <p>Quando um jogador for sacar, sempre atraz da linha da quadra se não, ponto adversário. O jogo se inicia quando tem 6 jogadores em quadra,
         cada time cada vez que a bola passa para o time adversário, o time tem direito a três toques na bola, se houver mais toques que isso, ponto adversário também.
         Nenhum jogador de nenhum dos times pode tocar na rede, ou também será penalizado com um ponto adversário, 
-        também o mesmo jogador não podera dar mais de dois toques na bola. se um jogador está ao fundo da quadra e ataca pisando na linha dos 3 também é penalizado.</p3>
+        também o mesmo jogador não podera dar mais de dois toques na bola. se um jogador está ao fundo da quadra e ataca pisando na linha dos 3 também é penalizado.</p>
 
 
     </body>
